Fixed height issues on search page on mobile devices and created possibility to add extra CSS-files to the header dynamically

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -215,6 +215,11 @@ body {
     color:white !important;
 }
 
+.thumbnail:hover {
+    box-shadow: 0px 2px 5px #888888;
+    background-color: #eee;
+}
+
 
 
 /** ---------------- END OF ADMIN MY RECIPES PAGE --------------*/
